# winsock-chat

./: .gitignore  CMakeLists.txt  README.md
docs/: report.md
src/client/: client.c  client.cpp  client.h  main.c  main.cpp
src/protocol/: protocol.c  protocol.h
src/server/: main.c  main.cpp  server.c  server.cpp  server.h
